--- a/index.html
+++ b/index.html
@@ -8,30 +8,17 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
-    	p {
-    		font-family: "Trebuchet MS", Helvetica, sans-serif;
-    	}
-
-    	.greenbox {
-    		width:300px;
-    		height: 50px;
-    		background-color: green;
-    		text-align: right;
-    	}
-
-    	.bold {
-    		font-weight: bold;
-    	}
+        h1 {
+            color: red;
+            float: center;
+        }
     </style>    
 </head>
 
 <body>
-	<div class="greenbox">
-		<p>This is some text</p>
-	</div>
-
-	<p class="bold">This is some bold text</p>
-
-	<p class="italic">This is some <span class="underline">italic</span> text</p>
+    <div>
+        <h1>TEST WEBSITE</h1>
+        <p>Under Construction</p>
+    </div>
 </body>
 </html>
