--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Learning CSS</title>
+    <title>Antimarvin.com BITCHES!</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
