got the fixed width working

--- a/index.html
+++ b/index.html
@@ -9,16 +9,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
         h1 {
-            color: red;
+            color: white;
             float: center;
+        }
+        #topbar {
+            float: center;
+            background-color: blue;
+        }
+        .fixedwidth {
+            width: 1050px;
+            margin: 0 auto;
         }
     </style>    
 </head>
 
 <body>
-    <div>
-        <h1>TEST WEBSITE</h1>
+<div id="container">
+    <div id="topbar">
+        <div class="fixedwidth">
+            <h1>Towel Inc.</h1>
+        </div>
+    </div>
+    <div class="fixedwidth">
         <p>Under Construction</p>
     </div>
+</div>
 </body>
 </html>
