--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
+        body {
+            margin: 0px;
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
+        }
+
         h1 {
             color: white;
-            float: center;
+            margin: 0px;
         }
+
         #topbar {
-            float: center;
+            width: 100%;
+            height: 40px;
             background-color: blue;
         }
+
         .fixedwidth {
             width: 1050px;
             margin: 0 auto;
@@ -24,15 +32,15 @@
 </head>
 
 <body>
-<div id="container">
-    <div id="topbar">
+    <div id="container">
+        <div id="topbar">
+            <div class="fixedwidth">
+                <h1>Towel Inc.</h1>
+            </div>
+        </div>
         <div class="fixedwidth">
-            <h1>Towel Inc.</h1>
+            <p>Under Construction!!</p>
         </div>
     </div>
-    <div class="fixedwidth">
-        <p>Under Construction</p>
-    </div>
-</div>
 </body>
 </html>
